fix pb url
